User response overflow change

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /Z9i/.vs/Z9i/v16/Browse.VC.opendb
+/Z9i/.vs/Z9i/v16/Browse.VC.db-wal
+/Z9i/.vs/Z9i/v16/Browse.VC.db-shm
+/Z9i/.vs/Z9i/v16/Browse.VC.db
